' Copyright 2017, 2018, 2022 Reahl Software Services (Pty) Ltd. All rights reserved.

@startuml
!include ../../../base.iuml

title SystemAccount and Party

package reahl.domain.partymodel{
	class Party
}

package reahl.domain.systemaccountmodel{
	class SystemAccount
	class LoginSession <<session_scoped>>
	class EmailAndPasswordSystemAccount

	SystemAccount <|-- EmailAndPasswordSystemAccount
}
reahl.domain.partymodel <- reahl.domain.systemaccountmodel

Party "1" -- "0..*" SystemAccount : < owner
SystemAccount "0..1" -right- "0..*" LoginSession

@enduml
